<resources>
    <string name="app_name">ProjetoFinalCM2022</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ButtonNewProfile">New profile</string>
    <string name="ButtonLoadProfile">Load Profile</string>
    <string name="ButtonHistory">History</string>
    <string name="about">about</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_name_hint">Your name</string>
    <string name="profile_password">Profile password</string>
    <string name="profile_password_hint">Your password</string>
    <string name="take_photo">Take a photo</string>
    <string name="save_profile">save profile</string>
    <string name="there_are_no_matches">there are no matches</string>
    <string name="mode">mode</string>
    <string name="date">date</string>
    <string name="winner">winner</string>
    <string name="number_shots">number of shots</string>
    <string name="boats_hits">boat hits</string>
    <string name="sunken_ships">sunken ships</string>
    <string name="login_info">Click to select the profile that you want to play as. Long click to edit a profile.</string>
    <string name="no_players">No players registered. Tap on PLUS to create a new profile.</string>
    <string name="new_profile_menu">create new profile</string>
    <string name="profile_old_password">Profile OLD password</string>
    <string name="profile_new_password">Profile NEW password</string>
    <string name="clear_photo">clear</string>
    <string name="profile_confirm_password">Confirm password</string>
    <string name="boat_1_selected">Boat 1 selected</string>
    <string name="button_boat_1">Boat 1 (2)</string>
    <string name="button_boat_2">Boat 2 (2)</string>
    <string name="button_boat_3">Boat 3 (2)</string>
    <string name="button_boat_5">Boat 5 (1)</string>
    <string name="clear_boats">Clear boats</string>

    <string name="ProfileExistenceNegative">Profile doesn\'t exist</string>
    <string name="AProfileAlreadyExists">A profile already exists. Do you want to create a new one?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ProfileAndPhotoDontExist">Profile and photo don\'t exist!</string>
    <string name="ButtonNewGameOffline">New offline game</string>
    <string name="ButtonGameServer">Game Server</string>
    <string name="ButtonGameClient">Game Client</string>
    <string name="ProfileSaved">Profile saved</string>
    <string name="FillNamePasswordPhoto">You need to fill in name, password and photo</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="IntentProfileError">Intent profile error</string>
    <string name="Mode">Mode</string>
    <string name="Date">Date</string>
    <string name="Winner">Winner</string>
    <string name="NumberShots">Number of shots</string>
    <string name="BoatsHit">Boats hit</string>
    <string name="SunkenShips">Sunken ships</string>
    <string name="tvBoatPart1">Boat</string>
    <string name="tvSelectedPart2">selected</string>
    <string name="Vertical">Vertical</string>
    <string name="Horizontal">Horizontal</string>
    <string name="Boat5AltPosition">Normal position (boat 5 only)</string>
    <string name="Boat5AltPositionOn">Alternative position (boat 5 only)</string>
    <string name="Boat1">Boat 1</string>
    <string name="Boat2">Boat 2</string>
    <string name="Boat3">Boat 3</string>
    <string name="Boat5">Boat 5</string>
    <string name="AllBoatSend">You did not put all the boats!</string>
    <string name="HelpBoatPositions">Put all boats in the desired positions</string>
    <string name="ButtonClear">CLEAR</string>
    <string name="Button5_1_">Boat 5 (1)</string>
    <string name="Button3_2_">Boat 3 (2)</string>
    <string name="Button2_2_">Boat 2 (2)</string>
    <string name="Button1_2_">Boat 1 (2)</string>
    <string name="Boat1Selected">Boat 1 selected</string>
    <string name="ThreeShotsMessage">You\'ve had three shots in a row. Do you want to change the position of a boat?</string>
    <string name="ToastShotBoat1">Shot boat 1</string>
    <string name="ToastShotBoat2">Shot boat 2</string>
    <string name="ToastShotBoat3">Shot boat 3</string>
    <string name="ToastShotBoat5">Shot boat 5</string>
    <string name="ToastWater">Water</string>
    <string name="WinMessage">You win!</string>
    <string name="NewGameMessage">New Game</string>
    <string name="ExitMessage">Exit</string>
    <string name="OpponentWonMessage">Your opponent wins</string>
    <string name="SaveErrorMessage">Error saving history: </string>
    <string name="MyBoard">My board</string>
    <string name="OpponentBoard">Opponent\'s board</string>
    <string name="AlreadyPuttedBoat">You already putted a boat</string>
    <string name="ChangeBoardMandatory">Change the board is mandatory</string>
    <string name="PlayerMenu">Player</string>
    <string name="OpponentMenu">Opponent</string>
    <string name="ThereAreNoMatches">There are no matches</string>
    <string name="NumberOfGames">Number of games in this app:</string>
    <string name="Credits">Credits</string>
    <string name="Help">help</string>
    <string name="Start">Start</string>
    <string name="Cancel">Cancel</string>
    <string name="Send">Send</string>
    <string name="Save">Save</string>
    <string name="IntroActivityTitle">Main page</string>
    <string name="CreateProfileTitle">Create profile</string>
    <string name="CreditsTitle">Credits</string>
    <string name="HistoryTitle">History</string>
    <string name="SelectTitle">Select</string>
    <string name="ThreeShotsTitle">Three shots</string>
    <string name="BattleshipGameTitle">Battleship game</string>
</resources>