<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".fragments.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@drawable/photo_booth"
        android:gravity="center">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="60dp"
            android:paddingBottom="10dp"
            android:src="@drawable/blank_profile"
            android:contentDescription="Profile photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="3.5">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/take_photo"
                android:layout_marginRight="10dp"
                android:text="@string/take_photo"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/clear_photo"
                android:backgroundTint="@color/white"
                android:text="@string/clear_photo"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center|top"
        android:orientation="vertical"

        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            android:text="@string/profile_name" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:inputType="textPersonName"
            android:hint="@string/profile_name_hint"
            android:textColorHint="@color/tabuleiroConfiguracao"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/dark_gray"
            android:text="@string/profile_password" />

        <EditText
            android:id="@+id/profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:hint="@string/profile_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/tabuleiroConfiguracao"
            android:textColor="@color/black"
            android:backgroundTint="@color/tabuleiroConfiguracao"/>
    </LinearLayout>

</LinearLayout>